fix: spacing blog listing

--- a/src/styles/objects/_index.scss
+++ b/src/styles/objects/_index.scss
@@ -1,9 +1,1 @@
-.o-index {
-  --margin-x-content: 5rem;
 
-  &__headline {
-    margin: 0 0 2rem;
-    text-transform: uppercase;
-    font-size: var(--font-size-2xl);
-  }
-}
